k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: colocation-imb
spec:
  selector:
    app: nginx-proxy
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 80
