k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: painel-ods
  namespace: colocation-imb
spec:
  selector:
    app: painel-ods
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: 8050
