k8s/route-external.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: painel-external
  namespace: colocation-imb
spec:
  host: odshomolog.imb.go.gov.br
  to:
    kind: Service
    name: painel-ods
    weight: 100
  port:
    targetPort: http-8050
  wildcardPolicy: None
