k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: painel-ods
  namespace: colocation-imb
spec:
  to:
    kind: Service
    name: nginx-proxy
  port:
    targetPort: http-80
